# incant

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  config.example.toml  deny.toml  install.ps1  install.sh
.beads/: issues.jsonl
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
src/: config.rs  context.rs  main.rs  protocol.rs  safety.rs  transport.rs
src/client/: clipboard.rs  mod.rs  socket.rs  tui.rs
src/daemon/: mod.rs  server.rs
src/daemon/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs
tests/: daemon_integration.rs  install.Tests.ps1  install_sh_integration.sh  installer_pty.py  windows_daemon_integration.rs
