[package]
name = "llmcmd"
version = "0.1.0"
edition = "2021"
description = "A hyper-performant terminal command translator"
authors = ["llmcmd contributors"]
license = "MIT"
repository = "https://github.com/deepc0py/incant"
keywords = ["cli", "llm", "terminal", "shell", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "llmcmd"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "net", "io-util", "sync", "time", "fs"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-input = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# Utility
dirs = "5"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
