[package]
name = "incant"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
description = "A hyper-performant terminal command translator"
authors = ["incant contributors"]
license = "Apache-2.0"
repository = "https://github.com/deepc0py/incant"
keywords = ["cli", "llm", "terminal", "shell", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "incant"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"
tui-input = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# HTTP client for LLM APIs
reqwest = { version = "0.13", features = ["json", "stream"] }

# Utility
dirs = "6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"

# Async utilities
futures = "0.3"
async-trait = "0.1"
regex = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
